--- a/index.html
+++ b/index.html
@@ -57,11 +57,23 @@
 		    border: solid 1px;
 		    box-shadow: inset -1px -2px 4px rgba(0,0,0,0.6);
 		}
-		button#volume {
-		    float: left;
-		    margin-right: 10px;
-		    border:none;
-    		margin-right: -20px;
+		#volume-label{
+			display: inline-block;
+		    height: 38px;
+		    padding: 0 30px;
+		    padding-left: 0px;
+		    padding-top: 0px;
+		    color: #555;
+		    text-align: center;
+		    font-size: 11px;
+		    font-weight: 600;
+		    line-height: 38px;
+		    letter-spacing: .1rem;
+		    text-transform: uppercase;
+		    text-decoration: none;
+		    white-space: nowrap;
+		    box-sizing: border-box;
+		    font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 		}
         </style>
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
@@ -87,7 +99,7 @@
             	<button id="reset">Reset All</button>
             </div>
             <div class="twelve columns volume-control">
-            	<button id="volume" >Volume:</button>
+            	<span id="volume-label">Volume:</span><br>
 	            <div href="#" class="vol" data-vol="0.0" data-title="1 minute timer" style="border-radius: 4px 0px 0px 4px;" id="v0">&nbsp;</div>
 	            <div href="#" class="vol" data-vol="0.1" data-title="1 minute timer" id="v1">&nbsp;</div>
 	            <div href="#" class="vol" data-vol="0.2" data-title="1 minute timer" id="v2">&nbsp;</div>
